# cmake-templates

opencv3/: CMakeLists.txt
